# proyecto-futbol

./: README.md  db.sqlite3  db.sqlite3.bak  manage.py  pyproject.toml  requirements.txt
base_app/: settings.py  urls.py
registro_futbol/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
registro_futbol/migrations/: 0001_initial.py  0002_alter_jugador_edad.py
registro_futbol_api/: apps.py  serializers.py  urls.py  views.py
templates/: base.html
templates/registro_futbol/: equipo_confirm_delete.html  equipo_form.html  equipo_list.html  jugador_confirm_delete.html  jugador_form.html  jugador_list.html
